--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "postcss": "^7.0.32",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
+    "tailwindcss": "^1.6.1",
+    "twin.macro": "^1.7.0",
+    "typescript": "~3.7.2"
+  },
+  "devDependencies": {
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
-  },
-  "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
+    "postcss-cli": "^7.1.1",
     "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^2.1.6"
   },
@@ -27,7 +34,7 @@
     "start": "yarn tailwind:css && yarn react-app-rewired start",
     "build": "yarn tailwind:css && yarn react-app-rewired build",
     "test": "yarn tailwind:css && yarn react-app-rewired test",
-    "tailwind:css": "tailwind build src/css/tailwind.css -c tailwind.config.js -o src/css/index.css",
+    "tailwind:css": "postcss build src/css/tailwind.css -c tailwind.config.js -o src/css/index.css",
     "eject": "yarn react-app-rewired eject"
   },
   "eslintConfig": {
