--- a/package.json
+++ b/package.json
@@ -5,19 +5,17 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "postcss": "^7.0.32",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
-    "tailwindcss": "^1.6.1",
     "twin.macro": "^1.7.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -26,9 +24,11 @@
     "autoprefixer": "^9.8.6",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0",
+    "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
     "react-app-rewire-mobx": "^1.0.9",
-    "react-app-rewired": "^2.1.6"
+    "react-app-rewired": "^2.1.6",
+    "tailwindcss": "^1.6.1"
   },
   "scripts": {
     "start": "yarn tailwind:css && yarn react-app-rewired start",
